# qt6_vstools_cmake_template_project

./: .gitignore  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/math/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Classes/: QtWidgetsApplication1.cpp
